--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -47,32 +47,64 @@
 					<div id="hxco-logo"><a href="#">HengXin.</a></div>
 				</div>
 				<div class="col-xs-10 text-center menu-1">
-					<ul>
-                        <li><a href="/" id="home">首页</a></li>
-                        <li><a href="/certification">学历学位认证</a></li>
-                        <li class="has-dropdown">
-                            <a href="/abroadeducation" id="abroad_education">名校直通</a>
-                            <ul class="dropdown">
-                                <li><a href="/highschool">初高中申请</a></li>
-								<li><a href="/mxztc">本研直通</a></li>
-								<li><a href="/ksbk">快速本科</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="/courseguide" id="course_guide">学术辅导</a></li>
-                        <li><a href="/zygh" id="career_planning">海归职业规划</a></li>
-                        <li><a href="/assistedliving" id="assistedliving">生活辅助</a></li>
-                        <li>
-							<a href="/loan" id="loan">创业贷款申请</a>
-						</li>
-                        <li><a href="/immigrant" id="immigrant">移民落户咨询</a></li>
-						<li>
-							<a href="/information" id="information">行业资讯</a>
-						</li>
+{#					<ul>#}
+{#                        <li><a href="/" id="home">首页</a></li>#}
+{#                        <li><a href="/certification">学历学位认证</a></li>#}
+{#                        <li class="has-dropdown">#}
+{#                            <a href="/abroadeducation" id="abroad_education">名校直通</a>#}
+{#                            <ul class="dropdown">#}
+{#                                <li><a href="/highschool">初高中申请</a></li>#}
+{#								<li><a href="/mxztc">本研直通</a></li>#}
+{#								<li><a href="/ksbk">快速本科</a></li>#}
+{#                            </ul>#}
+{#                        </li>#}
+{#                        <li><a href="/courseguide" id="course_guide">学术辅导</a></li>#}
+{#                        <li><a href="/zygh" id="career_planning">海归职业规划</a></li>#}
+{#                        <li><a href="/assistedliving" id="assistedliving">生活辅助</a></li>#}
+{#                        <li>#}
+{#							<a href="/loan" id="loan">创业贷款申请</a>#}
+{#						</li>#}
+{#                        <li><a href="/immigrant" id="immigrant">移民落户咨询</a></li>#}
+{#						<li>#}
+{#							<a href="/information" id="information">行业资讯</a>#}
+{#						</li>#}
+{##}
+{#                        <li>#}
+{#							<a href="/aboutus" id="about_us">关于我们</a>#}
+{#						</li>#}
+{#					</ul>#}
+                    <div class="nav-contain">
+                        <div class="nav-inner">
+                             <ul class="am-nav am-nav-pills am-nav-justify">
+                                <li><a href="/" id="home">首页</a></li>
+                                <li><a href="/certification">学历学位认证</a></li>
+                                <li>
+                                    <a href="/abroadeducation" id="abroad_education" >名校直通</a>
+                                <!-- sub-menu start-->
+                                    <ul class="sub-menu">
+                                    <li class="menu-item"><a href="/highschool">初高中申请</a></li>
+                                    <li class="menu-item"><a href="/mxztc">本研直通</a></li>
+                                    <li class="menu-item"><a href="/ksbk">快速本科</a></li>
+                                </ul>
+                                <!-- sub-menu end-->
+                                </li>
+                                <li><a href="/courseguide" id="course_guide">学术辅导</a></li>
+                                <li><a href="/zygh" id="career_planning">海归职业规划</a></li>
+                                <li><a href="/assistedliving" id="assistedliving">生活辅助</a></li>
+                                <li>
+                                    <a href="/loan" id="loan">创业贷款申请</a>
+                                </li>
+                                <li><a href="/immigrant" id="immigrant">移民落户咨询</a></li>
+                                <li>
+                                    <a href="/information" id="information">行业资讯</a>
+                                </li>
 
-                        <li>
-							<a href="/aboutus" id="about_us">关于我们</a>
-						</li>
-					</ul>
+                                <li>
+                                    <a href="/aboutus" id="about_us">关于我们</a>
+                                </li>
+                             </ul>
+                         </div>
+                    </div>
 				</div>
 			</div>
 
@@ -138,7 +170,7 @@
                         </a>
                     </div>
                     <h3 style="margin-top: 1em">关注我们</h3>
-                    <div style="margin-top: 1em"><a href="/" target="_blank"><img src="/static/images/web/sina.png"> </a></div>
+                    <div style="margin-top: 1em"><a href="/" target="_blank"><i class="icon-sina-weibo" style="font-size:40px;color:white;"></i> </a></div>
                 </div>
 				<div class="col-md-4">
                     <h3>关注微信公众号</h3>
