--- a/core/static/css/headercss/style.css
+++ b/core/static/css/headercss/style.css
@@ -222,6 +222,9 @@ h1, h2, h3, h4, h5, h6, figure {
 .hxco-nav ul li.has-dropdown:hover a, .hxco-nav ul li.has-dropdown:focus a {
   color: #fff;
 }
+
+
+
 .hxco-nav ul li.btn-cta a {
   color: #52d3aa;
 }
@@ -1226,7 +1229,7 @@ form label {
 #hxco-offcanvas ul li.offcanvas-has-dropdown > a:after {
   position: absolute;
   right: 0px;
-  font-family: 'icomoon';
+  font-family: 'Microsoft YaHei';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -2226,21 +2229,29 @@ form label {
     background: linear-gradient(135deg, #4cc1bd 0%, #3f95ea 100%);
     border: medium none;
     border-radius: 4px;
-    color: #fff;
+    color: rgba(255, 255, 255, 0.5);
     margin-top: 10px;
     margin-bottom: 30px;
     padding: 8px 20px;
+    font-weight: 500;
+    letter-spacing: 2px;
+}
+
+.btnprimary i{
+  font-size:18px;
+  /*margin-top: 10px;*/
 }
 
 .btnprimary:hover{
-  box-shadow: 0 14px 20px -9px rgba(0, 0, 0, 0.75) !important;
+  /*box-shadow: 0 14px 20px -9px rgba(0, 0, 0, 0.75) !important;*/
   background: #4cc1bd;
   background: -moz-linear-gradient(-45deg, #4cc1bd 0%, #3f95ea 100%);
   /*background: -webkit-gradient(left top, right bottom, color-stop(0%, #4cc1bd), color-stop(100%, #3f95ea));*/
   background: -webkit-linear-gradient(-45deg, #4cc1bd 0%, #3f95ea 100%);
   background: -o-linear-gradient(-45deg, #4cc1bd 0%, #3f95ea 100%);
   background: -ms-linear-gradient(-45deg, #4cc1bd 0%, #3f95ea 100%);
-  background: linear-gradient(135deg, #4cc1bd 0%, #3f95ea 100%);;
+  background: linear-gradient(135deg, #4cc1bd 0%, #3f95ea 100%);
+  color:#fff;
 }
 
 .single_comments {
@@ -2275,17 +2286,15 @@ form label {
 }
 
 .agile-prod1 h4 {
-    color: #fb5710;
-    font-size: 24px;
+    color: #333;
+    font-size: 30px;
     font-weight: 600;
     letter-spacing: 2px;
     margin-bottom: 28px;
-
-    text-transform: uppercase;
 }
 
 .agile-prod1 p {
-    color: #000;
+    /*color: #000;*/
     font-size: 1em;
     line-height: 1.9em;
 }
@@ -2497,3 +2506,59 @@ h1{
   margin-bottom: 0px !important;
   margin-top: 0px !important;
 }
+
+
+
+
+.nav-contain .nav-inner {
+    margin: 0 auto;
+    /*max-width: 1140px;*/
+}
+.nav-contain .nav-inner .am-nav li {
+    list-style: outside none none;
+    padding: 25px 10px;
+    position: relative;
+}
+.nav-contain .nav-inner .am-nav li:hover .sub-menu {
+    display: block;
+    margin-top: -10px;
+}
+.nav-contain .nav-inner .am-nav li .sub-menu {
+    background: #FFF none repeat scroll 0 0;
+    border-radius: 0 0 3px 3px;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.15);
+    display: none;
+    left: 6px;
+    /*margin: 0;*/
+    padding-left: 0;
+    position: absolute;
+    top: 100%;
+    width:150%;
+    z-index: 1000 !important;
+    margin-left: -23px;
+}
+.nav-contain .nav-inner .am-nav li .sub-menu .menu-item {
+
+    min-width: 160px;
+    padding: 0 10px;
+    position: relative;
+}
+.nav-contain .nav-inner .am-nav li .sub-menu .menu-item a {
+    display: inline-block;
+    padding: 15px 20px;
+    border-top: 1px solid #eaeaea;
+    color:#999999;
+}
+.nav-contain .nav-inner .am-nav li a {
+    color:  rgba(255, 255, 255, 0.5);
+    padding: 0;
+}
+.nav-contain .nav-inner .am-nav li a:hover {
+    /*background: #fff none repeat scroll 0 0;*/
+    color: #FFF;
+}
+
+.menu-item a:hover{
+   color:#4ABBC3  !important;
+}
+
