--- a/core/templates/web/information.html
+++ b/core/templates/web/information.html
@@ -12,74 +12,99 @@
     <div class="container carousel-margin">
         <div class="row" style="margin-top: 3em;">
             <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
-                <h3>行业资讯</h3>
+                <h4>行业资讯</h4>
+                <p>恒心为您提供最新的新闻资讯以及留学的小知识</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-8">
-                <div>
-                    <div class="col-xs-12 col-sm-2 text-center">
-                        <div class="entry-meta text-center">
-                            <span id="publish_date">07  NOV</span>
-                            <span><i class="icon-user"></i> <a href="#">John Doe</a></span>
-                            <span><i class="icon-code"></i> <a href="#">2 Comments</a></span>
-                            <span><i class="icon-heart"></i><a href="#">56 Likes</a></span>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-10 text-left blog-content">
-                        <img class="img-responsive img-blog" src="/static/images/web/testimg1.jpg" alt="" width="100%">
 
-                        <h2><a href="/">Consequat bibendum quam liquam viverra</a></h2>
-                        <h3>
-                            Curabitur quis libero leo, pharetra mattis eros. Praesent consequat libero eget dolor convallis vel rhoncus magna scelerisque. Donec nisl ante,
-                            elementum eget posuere a, consectetur a metus. Proin a adipiscing sapien. Suspendisse vehicula porta lectus vel semper. Nullam sapien elit,
-                            lacinia eu tristique non.posuere at mi. Morbi at turpis id urna ullamcorper ullamcorper.
-                        </h3>
-                        <a class="btn btnprimary readmore" href="/">查看更多<i class="icon-align-right"></i></a>
-                    </div>
-
-                <div>
-                    <div class="col-xs-12 col-sm-2 text-center">
-                        <div class="entry-meta text-center">
-                            <span id="publish_date">07  NOV</span>
-                            <span><i class="icon-user"></i> <a href="#">John Doe</a></span>
-                            <span><i class="icon-code"></i> <a href="#">2 Comments</a></span>
-                            <span><i class="icon-heart"></i><a href="#">56 Likes</a></span>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-10 text-left blog-content">
-                        <img class="img-responsive img-blog" src="/static/images/web/testimg1.jpg" alt="" width="100%">
-
-                        <h2><a href="/">Consequat bibendum quam liquam viverra</a></h2>
-                        <h3>
-                            Curabitur quis libero leo, pharetra mattis eros. Praesent consequat libero eget dolor convallis vel rhoncus magna scelerisque. Donec nisl ante,
-                            elementum eget posuere a, consectetur a metus. Proin a adipiscing sapien. Suspendisse vehicula porta lectus vel semper. Nullam sapien elit,
-                            lacinia eu tristique non.posuere at mi. Morbi at turpis id urna ullamcorper ullamcorper.
-                        </h3>
-                        <a class="btn btnprimary readmore" href="/">查看更多<i class="icon-align-right"></i></a>
-                    </div>
-                </div>
-            </div>
-            </div>
-            <div class="col-md-4 text-left">
-                <div class="widget categories">
-                    <h3>推荐文章</h3>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="single_comments">
-                                <a href="/"><p><i class="icon-star"></i>Lorem ipsum dolor sit amet </p></a>
-                            </div>
-                            <div class="single_comments">
-                                <a href="/"><p><i class="icon-star"></i>Lorem ipsum dolor sit amet </p></a>
-                            </div>
-                            <div class="single_comments">
-                                <a href="/"><p><i class="icon-star"></i>Lorem ipsum dolor sit amet </p></a>
-                            </div>
-
-                        </div>
-                    </div>
+        <div class="row" style="margin-top: 4em;">
+            <div class="col-xs-4 text-left">
+                <div class="article">
+                      <div class="article-img">
+                            <img src="/static/images/web/testimg1.jpg" alt="" style="width: 100%;">
+                      </div>
+                      <div class="article-header">
+                            <h2><a href="#" rel="">云适配：价值驱动是占有市场的关键</a></h2>
+                            <ul class="article--meta">
+                                <li class="article--meta_item -date">December 28, 2015</li>
+                                <li class="article--meta_item comments">33 Comments</li>
+                            </ul>
+                      </div>
+                      <div class="article--content">
+                          <p>作为一家技术创新型企业，技术的先进性和创新型是构建企业核心竞争力的根本。但是要想占领市场并获得持续增长，需要从服务市场的角度出发，为用户输出价值，也是云适配的发展宗旨。</p>
+                      </div>
+                      <div class="article--footer">
+                          <a href="#" class="link">Read More</a>
+                      </div>
                 </div>
             </div>
         </div>
+    </div>
+{#        <div class="row">#}
+{#            <div class="col-md-8">#}
+{#                <div>#}
+{#                    <div class="col-xs-12 col-sm-2 text-center">#}
+{#                        <div class="entry-meta text-center">#}
+{#                            <span id="publish_date">07  NOV</span>#}
+{#                            <span><i class="icon-user"></i> <a href="#">John Doe</a></span>#}
+{#                            <span><i class="icon-code"></i> <a href="#">2 Comments</a></span>#}
+{#                            <span><i class="icon-heart"></i><a href="#">56 Likes</a></span>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <div class="col-xs-12 col-sm-10 text-left blog-content">#}
+{#                        <img class="img-responsive img-blog" src="/static/images/web/testimg1.jpg" alt="" width="100%">#}
+{##}
+{#                        <h2><a href="/">Consequat bibendum quam liquam viverra</a></h2>#}
+{#                        <h3>#}
+{#                            Curabitur quis libero leo, pharetra mattis eros. Praesent consequat libero eget dolor convallis vel rhoncus magna scelerisque. Donec nisl ante,#}
+{#                            elementum eget posuere a, consectetur a metus. Proin a adipiscing sapien. Suspendisse vehicula porta lectus vel semper. Nullam sapien elit,#}
+{#                            lacinia eu tristique non.posuere at mi. Morbi at turpis id urna ullamcorper ullamcorper.#}
+{#                        </h3>#}
+{#                        <a class="btn btnprimary readmore" href="/">查看更多<i class="icon-align-right"></i></a>#}
+{#                    </div>#}
+{##}
+{#                <div>#}
+{#                    <div class="col-xs-12 col-sm-2 text-center">#}
+{#                        <div class="entry-meta text-center">#}
+{#                            <span id="publish_date">07  NOV</span>#}
+{#                            <span><i class="icon-user"></i> <a href="#">John Doe</a></span>#}
+{#                            <span><i class="icon-code"></i> <a href="#">2 Comments</a></span>#}
+{#                            <span><i class="icon-heart"></i><a href="#">56 Likes</a></span>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <div class="col-xs-12 col-sm-10 text-left blog-content">#}
+{#                        <img class="img-responsive img-blog" src="/static/images/web/testimg1.jpg" alt="" width="100%">#}
+{##}
+{#                        <h2><a href="/">Consequat bibendum quam liquam viverra</a></h2>#}
+{#                        <h3>#}
+{#                            Curabitur quis libero leo, pharetra mattis eros. Praesent consequat libero eget dolor convallis vel rhoncus magna scelerisque. Donec nisl ante,#}
+{#                            elementum eget posuere a, consectetur a metus. Proin a adipiscing sapien. Suspendisse vehicula porta lectus vel semper. Nullam sapien elit,#}
+{#                            lacinia eu tristique non.posuere at mi. Morbi at turpis id urna ullamcorper ullamcorper.#}
+{#                        </h3>#}
+{#                        <a class="btn btnprimary readmore" href="/">查看更多<i class="icon-align-right"></i></a>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#            </div>#}
+{#            <div class="col-md-4 text-left">#}
+{#                <div class="widget categories">#}
+{#                    <h3>推荐文章</h3>#}
+{#                    <div class="row">#}
+{#                        <div class="col-sm-12">#}
+{#                            <div class="single_comments">#}
+{#                                <a href="/"><p><i class="icon-star"></i>Lorem ipsum dolor sit amet </p></a>#}
+{#                            </div>#}
+{#                            <div class="single_comments">#}
+{#                                <a href="/"><p><i class="icon-star"></i>Lorem ipsum dolor sit amet </p></a>#}
+{#                            </div>#}
+{#                            <div class="single_comments">#}
+{#                                <a href="/"><p><i class="icon-star"></i>Lorem ipsum dolor sit amet </p></a>#}
+{#                            </div>#}
+{##}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
     </div>
 {% endblock %}
