--- a/core/static/css/headercss/style.css
+++ b/core/static/css/headercss/style.css
@@ -2562,3 +2562,63 @@ h1{
    color:#4ABBC3  !important;
 }
 
+
+.article {
+    margin: 0 0 100px;
+}
+.article .article-img {
+    border-radius: 3px;
+    margin: 0 0 26px;
+    overflow: hidden;
+}
+
+.article .article-header {
+    border-radius: 3px;
+    margin: 0 0 13px;
+}
+
+.article--content {
+    color: #969696;
+    font-size: 16px;
+    line-height: 23px;
+}
+
+.article .article--content p {
+    font-size: 14px;
+}
+
+.article .article--footer .link::after {
+    color: #59bcdb;
+    margin-left: 8px;
+}
+.article .article-header .article--meta_item {
+    color: #969696;
+    display: inline-block;
+    font-size: 14px;
+    margin: 10px 10px 0 0;
+    position: relative;
+}
+
+.article .article-header h2 {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 8px;
+}
+
+.article .article-header h2 a {
+    color:#666;
+}
+
+.article .article-header h2 a:hover {
+    color:#59bcdb;
+}
+
+
+.article .article--footer .link {
+    color: #59bcdb;
+    font-size: 16px;
+}
+
+.article--meta{
+  padding:0 !important;
+}
