--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -263,53 +263,53 @@
                 <div class="row feature-title text-center" id="anli">
                     <h3>我们的成功案例</h3>
                 </div>
-				<div class="row">
+				<div class="rows">
 					<div id="owl-car" class="owl-carousel owl-carousel-fullwidth ">
 
-                                    <div class="item testimony-slide active text-center">
-                                        <figure>
-                                            <a  data-fancybox="gallery" href="/static/images/web/s1.jpg"  >
-                                                <img src="/static/images/web/s1.jpg" alt="user">
-                                            </a>
-                                        </figure>
-                                    </div>
-                                    <div class="item testimony-slide active text-center">
-                                        <figure>
-                                            <a  data-fancybox="gallery" href="/static/images/web/s2.jpg" >
-                                                <img src="/static/images/web/s2.jpg" alt="user">
-                                            </a>
-                                        </figure>
-                                    </div>
-                                    <div class="item testimony-slide active text-center">
-                                        <figure>
-                                            <a  data-fancybox="gallery" href="/static/images/web/s3.jpg">
-                                                <img src="/static/images/web/s3.jpg" alt="user">
-                                            </a>
-                                        </figure>
-                                    </div>
-                                    <div class="item testimony-slide active text-center">
-                                        <figure>
-                                            <a  data-fancybox="gallery" href="/static/images/web/s4.jpg">
-                                                <img src="/static/images/web/s4.jpg" alt="user">
-                                            </a>
-                                        </figure>
-                                    </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/s1.jpg"  >
+                                    <img src="/static/images/web/s1.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/s2.jpg" >
+                                    <img src="/static/images/web/s2.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/s3.jpg">
+                                    <img src="/static/images/web/s3.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/s4.jpg">
+                                    <img src="/static/images/web/s4.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
 
 
-                                    <div class="item testimony-slide active text-center">
-                                        <figure>
-                                            <a  data-fancybox="gallery" href="/static/images/web/t1.png">
-                                                <img src="/static/images/web/t1.png" alt="user">
-                                            </a>
-                                        </figure>
-                                    </div>
-                                    <div class="item testimony-slide active text-center">
-                                        <figure>
-                                            <a  data-fancybox="gallery" href="/static/images/web/t2.png">
-                                                <img src="/static/images/web/t2.png" alt="user">
-                                            </a>
-                                        </figure>
-                                    </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/t1.png">
+                                    <img src="/static/images/web/t1.png" alt="user">
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/t2.png">
+                                    <img src="/static/images/web/t2.png" alt="user">
+                                </a>
+                            </figure>
+                        </div>
 
                     </div>
 
@@ -319,9 +319,6 @@
 	</div>
     </div>
 <script>
-
-
-
     $(function(){
         $('#owl-car').owlCarousel({
             items: 4,
@@ -329,10 +326,6 @@
             navigationText: ["上一个","下一个"]
         });
     });
-
-
-
-
 </script>
 {#	<div id="hxco-services">#}
 {#		<div class="hxco-container">#}
